syntax = "proto3";

package exercisepb;

import "google/protobuf/timestamp.proto";

message UserExercise {
  string id = 1;
  string audio = 2;
  string level = 3;
  string content = 4;
  string translated = 5;
  string vocabulary = 6;
  string correctAnswer = 7;
  repeated string options = 8;
  int32 correctStreak = 9;
  bool isFavorite = 10;
  bool isMastered = 11;
  google.protobuf.Timestamp updatedAt = 12;
  google.protobuf.Timestamp nextReviewAt = 13;
}

message ExerciseCollection {
  string id = 1;
  string name = 2;
  string slug = 3;
  string translated = 4;
  string image = 5;
  int32 statsExercises = 7;
  int32 statsInteracted = 8;
}